add get flight mode endpoint
